2009-06-23  Xavier Queralt  <xqueralt@flumotion.com>
	
	reviewed by: Jan

	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/admin/gtk/overlaystep.py:
	Add help hyperlinks to online documentation on how to install new
	GStreamer elements and/or new python modules.
	* flumotion/admin/gtk/message.py:
	Insert a space between the message and an hyperlink.
	* flumotion/common/documentation.py:
	Added two methods to insert an hyperlink to a documentation's section.
	* flumotion/scenario/steps/httpstreamersteps.py:
	Wizard's methods requireElements and requireImport already set a
	proper error message. Don't do things twice!
	Don't populate the plugs if the worker checks have failed.
	* flumotion/worker/checks/check.py:
	Add hyperlinks to online documentation on how to fix permissions
	problems with the devices and how to install new GStreamer elements.
	Fixes #114

2009-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/extern/log/test_log.py:
	  Improve coverage some more by adding tests.

2009-06-24  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Reverting to NoneType return. Fixed the connectEater docstring

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Return defer.succeed(None) instead

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	No need to do string interpolation in debug logging

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Include Feed info in the debug log from the last commit

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Added debug log on instances where eatFrom calls are ignored.

2009-06-22  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/base/feedersnode.py:
	Force the first node to be selected when the selection vanishes, for
	example, because a row is collapsed.